--- a/eTicketsMy/appsettings.json
+++ b/eTicketsMy/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DBConnection": "server=(localdb)\\MSSQLLocalDB;database=ecommerce-app-db-my;Trusted_Connection=true"
+  },
   "AllowedHosts": "*"
 }
